[gd_scene load_steps=6 format=3 uid="uid://c43yxm81wfpf0"]

[ext_resource type="Script" path="res://Scenes/credits_keyboard_btn.gd" id="1_6jpop"]
[ext_resource type="PackedScene" uid="uid://bwtvmj4k6uvwj" path="res://Scenes/keyboard_btn.tscn" id="2_tf21t"]
[ext_resource type="AudioStream" uid="uid://b54e31absucor" path="res://Assets/Audio/option_beep.wav" id="3_kimbb"]
[ext_resource type="AudioStream" uid="uid://kc07wigiwtsm" path="res://Assets/Audio/select_button.wav" id="4_mm56h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3nrw8"]
bg_color = Color(0.188235, 0.384314, 0.188235, 1)

[node name="credits_scene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3nrw8")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 8.0
offset_right = 8.0
offset_bottom = 63.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.0588235, 0.219608, 0.0588235, 1)
theme_override_colors/font_shadow_color = Color(0.607843, 0.737255, 0.0588235, 1)
theme_override_font_sizes/font_size = 50
text = "ALL OF THESE ARE AMAZING!"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -576.0
offset_top = -575.0
offset_right = 576.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 50
script = ExtResource("1_6jpop")

[node name="artButton" parent="VBoxContainer" instance=ExtResource("2_tf21t")]
layout_mode = 2
theme_override_font_sizes/font_size = 49
text = "LITERALLY ALL OF THE ART - 
Toadzillart"

[node name="musicButton" parent="VBoxContainer" instance=ExtResource("2_tf21t")]
layout_mode = 2
theme_override_font_sizes/font_size = 43
text = "ALL OF THE BACKGROUND MUSIC -
??? {IF U SEE THIS, CALL!}"

[node name="meButton" parent="VBoxContainer" instance=ExtResource("2_tf21t")]
layout_mode = 2
text = "EVERYTHING ELSE-
ME!!"

[node name="backButton" parent="VBoxContainer" instance=ExtResource("2_tf21t")]
layout_mode = 2
text = "- back"

[node name="beepSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_kimbb")

[node name="selectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_mm56h")

[connection signal="pressed" from="VBoxContainer/backButton" to="VBoxContainer" method="_on_back_button_pressed"]
